Use UTF-8 as default encoding for JSON

Unlabelled document of content type application/json is UTF-8
by default as per RFC-7159#sectio-8.1. This CL takes it into
account when instantiating TextResourceDecoder.

BUG=748440

Change-Id: I4b18d9c1359eb9c8f0ff3e10fee89ad48d8c2e35
Reviewed-on: https://chromium-review.googlesource.com/587829
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: Jinsuk Kim <jinsukkim@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490172}
Former-commit-id: 0a6f6a195d44070c256172a2ca0c8353d92b596d